--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,10 @@
     "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false
   },
+  "include": ["src", "../../shared"],
   "exclude": ["node_modules", "dist"],
   "baseUrl": "./",
+  "paths": {
+    "@shared/*": ["../../shared/*"]
+  }
 }
