--- a/to_do_app_be/tsconfig.server.json
+++ b/to_do_app_be/tsconfig.server.json
@@ -4,7 +4,7 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
 
-    "outDir": "../dist/server",
+    "outDir": "dist/server",
 
     "strict": true,
     "esModuleInterop": true,
