--- a/to_do_app_be/package.json
+++ b/to_do_app_be/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "build": "tsc --project tsconfig.server.json",
+    "build": "tsc",
     "start": "node dist/server/src/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "typeorm:migrate": "npx typeorm migration:run --dataSource dist/core/db.js"
