--- a/to_do_app_be/tsconfig.server.json
+++ b/to_do_app_be/tsconfig.server.json
@@ -1,19 +1,16 @@
 {
   "compilerOptions": {
+    "outDir": "dist/server",
     "target": "ES2020",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-
-    "outDir": "dist/server",
-
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-
+    "forceConsistentCasingInFileNames": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false,
-
     "baseUrl": "./",
     "paths": {
       "@shared/*": ["shared/*"]
