--- a/to_do_app_be/tsconfig.json
+++ b/to_do_app_be/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2020",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "outDir": "./dist",
+    "outDir": "./dist/server",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
